# storytime

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  build.cmake  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance-request.md
.github/workflows/: ccpp.yml
cmake/: compile_lua.cmake  copy.cmake
darkle/: CMakeLists.txt
darkle/src/: Application.cpp  Application.h  Core.h  Engine.cpp  Engine.h  GraphicsContext.cpp  GraphicsContext.h  Log.cpp  Log.h  Window.cpp  Window.h
darkle/src/graphics/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexAttribute.cpp  VertexAttribute.h
darkle/src/system/: Application.cpp  Application.h  Core.h  Timestep.cpp  Timestep.h
darkle/src/window/: Window.cpp  Window.h
darkle/src/window/events/: Event.cpp  Event.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
darkle/src/window/input/: KeyCodes.h
darkle/src/window/layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
include/storytime/: storytime.h
lua/: main-1.0-1.rockspec
lua/storytime/: class.lua  init.lua  msgpack.lua
res/shaders/: quad.frag  quad.vert  simple.vert  texture.vertex.glsl  triangle.vert
sandbox/: CMakeLists.txt
sandbox/assets/worlds/: world_pixelcave.json
sandbox/res/tiled/pixelcave/: pixelcave.json  pixelcave.tiled-session
sandbox/res/tiled/pixelcave/tilesets/: cave_tileset.json  trees-trunk-white.json
sandbox/res/worlds/: sandbox.json
sandbox/src/: Sandbox.cpp  Sandbox.h  SandboxLayer.cpp  SandboxLayer.h  Scene.cpp  Scene.h  TriangleLayer.cpp  TriangleLayer.h  main.cpp
src/: st_app.h  st_config.h  st_engine.cpp  st_engine.h  st_key_event 2.h  st_key_event.cpp  st_main.cpp  st_main.h  st_pch.h  st_run.cpp  st_run.h  storytime_app.cpp  storytime_app.h  storytime_config.h  storytime_main.cpp  storytime_main.h  storytime_pch.h
src/audio/: audio.cpp  audio_engine.cpp  st_audio.cpp  st_audio.h  st_audio_engine.cpp
src/event/: st_event.cpp  st_event.h  st_event_handler.cpp  st_event_handler.h  st_event_manager.cpp  st_event_manager.h  st_events.h  st_key_pressed_event.cpp  st_key_pressed_event.h  st_key_released_event.cpp  st_key_released_event.h  st_key_repeated_event.cpp  st_key_repeated_event.h  st_key_typed_event.cpp  st_key_typed_event.h  st_mouse_button_pressed_event.cpp  st_mouse_button_pressed_event.h  st_mouse_button_released_event.cpp  st_mouse_button_released_event.h  st_mouse_moved_event.cpp  st_mouse_moved_event.h  st_mouse_scroll_event.cpp  st_mouse_scroll_event.h  st_window_closed_event.cpp  st_window_closed_event.h  (+6 more)
storytiled/: CMakeLists.txt
storytiled/include/storytiled/: Storytiled.h
storytiled/src/: FileSystem.cpp  FileSystem.h  Layer.cpp  Layer.h  Object.cpp  Object.h  Property.cpp  Property.h  Tileset.cpp  Tileset.h  World.cpp  World.h
storytime/: .gitignore  CMakeLists.txt
storytime.editor/: CMakeLists.txt
storytime.editor/src/: EditorLayer.cpp  EditorLayer.h  main.cpp
storytime.test/: CMakeLists.txt
storytime.test/src/: main.cpp
storytime/assets/shaders/: flat_color.fragment.glsl  flat_color.glsl  flat_color.vertex.glsl
storytime/cmake/: copy_resources.cmake
storytime/include/storytime/: Storytime.h  storytime.h
storytime/lib/imgui-1.76/: .gitignore
storytime/lib/imgui-1.76/examples/example_glfw_vulkan/: CMakeLists.txt
storytime/res/shaders/: color.fragment.glsl  color.vertex.glsl  flat_color.fragment.glsl  flat_color.vertex.glsl  texture.fragment.glsl  texture.vertex.glsl
storytime/src/: Application.cpp  Application.h  Engine.cpp  Engine.h  Game.h  new_application.cpp  new_application.h  pch.h  run.cpp  run.h  service_locator.h  storytime_app.cpp  storytime_app.h  storytime_engine.cpp  storytime_engine.h  storytime_main.cpp  storytime_main.h  storytime_pch.h
storytime/src/audio/: audio.cpp  audio.h  audio_engine.cpp  audio_engine.h  audio_module.cpp  audio_module.h  audio_player.cpp  audio_player.h
storytime/src/graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsLog.cpp  GraphicsLog.h  ImGuiRenderer.cpp  ImGuiRenderer.h  IndexBuffer.cpp  IndexBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexAttribute.cpp  VertexAttribute.h  VertexBuffer.cpp  VertexBuffer.h  bitmap_font.cpp  bitmap_font.h  camera.h  framebuffer.cpp  graphics_module.cpp  graphics_module.h  (+20 more)
storytime/src/resource/: resource_loader.cpp  resource_loader.h  resource_module.cpp  resource_module.h
storytime/src/system/: Application.cpp  Application.h  CoordinateSystem.h  Core.h  FileReader.cpp  FileReader.h  FileSystem.cpp  FileSystem.h  Log.cpp  Log.h  Random.cpp  Random.h  ResourceLoader.cpp  ResourceLoader.h  Tag.cpp  Tag.h  Timer.cpp  Timer.h  Timestep.cpp  Timestep.h  assert.h  clock.h  environment.h  error.cpp  error.h  error_signal.cpp  error_signal.h  file_system.cpp  log.cpp  log.h  memory.cpp  memory.h  memory_allocator.cpp  memory_allocator.h  memory_tracker.cpp  module.cpp  module.h  pointers.h  random.cpp  random.h  (+6 more)
storytime/src/window/: Event.cpp  Event.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseEvent.cpp  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.cpp  Window.h  WindowEvent.h  event.cpp  event.h  event_manager.cpp  event_manager.h  key.cpp  key_event.h  mouse_button.cpp  mouse_button.h  mouse_event.h  new_window.cpp  new_window.h  user_input.cpp  user_input.h  window.cpp  window.h  window_module.cpp  window_module.h
storytime/src/window/events/: Event.cpp  Event.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
storytime/src/window/input/: KeyCodes.h
storytime/src/window/layers/: Layer.h  LayerStack.h
(+411 files in other folders)
